[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monologue-tools"
version = "0.1.0"
description = "Personal monologue tools for managing daily diary entries and email newsletters"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Danny O'Brien", email = "danny@spesh.com"},
]
keywords = ["notion", "diary", "newsletter", "markdown", "buttondown"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "beautifulsoup4>=4.12.3",
    "markdown>=3.6",
    "marko>=2.0.3",
    "notion @ git+https://github.com/jamalex/notion-py.git@b3630b8c425fd217de5c08800ffc761474d4089b",
    "notion-client>=2.2.1",
    "requests>=2.31.0",
    "python-slugify>=8.0.4",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.0",
    "ruff>=0.12.1",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
notion2monologue = "monologue_tools.notion2monologue:main"
transformnotion = "monologue_tools.transformnotion:main"

[project.urls]
"Homepage" = "https://github.com/dannyob/monologue-tools"
"Bug Tracker" = "https://github.com/dannyob/monologue-tools/issues"

[tool.setuptools]
packages = {find = {where = ["src"]}}
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test_*.py" = ["F401", "F811"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["monologue_tools"]
